deployment/kube/gateway/api-gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul
  listeners:
    - protocol: HTTPS
      port: 8081
      name: https
      tls:
        mode: Terminate
        certificateRefs:
          - name: consul-api-tls-secret
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
