deployment/kube/gateway/routes.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-route
  namespace: default
spec:
  parentRefs:
    - name: api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: nginx
          namespace: default
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: grpc-default-route
  namespace: default
spec:
  parentRefs:
    - name: api-gateway
  rules:
    - backendRefs:
        - kind: Service
          name: nginx
          namespace: default
          port: 80
